<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/main_header" />



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_marginRight="@dimen/space_20"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_gravity="center_vertical"
            android:text="@string/uesr_name"
            android:textSize="@dimen/fontsize_14sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/name_et"
            android:textColorHint="@color/qianhuise"
            android:textSize="@dimen/fontsize_14sp"
            android:hint="请输入真实姓名"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:layout_marginLeft="90dp"
        android:background="@color/tiao"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_marginRight="@dimen/space_20"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_gravity="center_vertical"
            android:text="@string/telephone"
            android:textSize="@dimen/fontsize_14sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/phone_et"
            android:singleLine="true"
            android:inputType="phone"
            android:textColorHint="@color/qianhuise"
            android:textSize="@dimen/fontsize_14sp"
            android:hint="请输入联系电话"
            android:focusable="false"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/get_code"
            android:layout_marginRight="@dimen/space_20"
            android:layout_gravity="center_vertical"
            android:text="获取验证码"
            android:paddingLeft="@dimen/space_3"
            android:paddingRight="@dimen/space_3"
            android:textSize="@dimen/fontsize_14sp"
            android:textColor="@color/chengse"
            android:background="@drawable/button_yellow_kong"
            android:layout_width="95dp"
            android:layout_height="35dp" />

    </LinearLayout>

    <View
        android:layout_marginLeft="90dp"
        android:background="@color/tiao"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_marginRight="33dp"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_gravity="center_vertical"
            android:text="验证码"
            android:textSize="@dimen/fontsize_14sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/code_et"
            android:inputType="number"
            android:textColorHint="@color/qianhuise"
            android:textSize="@dimen/fontsize_14sp"
            android:hint="请输入验证码"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:layout_marginLeft="90dp"
        android:background="@color/tiao"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"/>

    <LinearLayout
        android:id="@+id/cpy_name_ly"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_marginRight="@dimen/space_20"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_gravity="center_vertical"
            android:text="@string/company_name"
            android:textSize="@dimen/fontsize_14sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/company_name"
            android:textColorHint="@color/qianhuise"
            android:textSize="@dimen/fontsize_14sp"
            android:hint="请输入公司名称"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:layout_height="match_parent" />

    </LinearLayout>

    <View
        android:id="@+id/one_v"
        android:layout_marginLeft="90dp"
        android:background="@color/tiao"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"/>

    <LinearLayout
        android:id="@+id/cpy_ads_ly"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_marginRight="@dimen/space_20"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_gravity="center_vertical"
            android:text="@string/company_address"
            android:textSize="@dimen/fontsize_14sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/company_address"
            android:textColorHint="@color/qianhuise"
            android:textSize="@dimen/fontsize_14sp"
            android:hint="请选择省、市、区"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:focusable="false"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_marginRight="@dimen/space_20"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/family_ly"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_marginRight="@dimen/space_20"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_gravity="center_vertical"
            android:text="家庭地址"
            android:textSize="@dimen/fontsize_14sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/family_et"
            android:textColorHint="@color/qianhuise"
            android:textSize="@dimen/fontsize_14sp"
            android:hint="请选择省、市、区"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:focusable="false"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_marginRight="@dimen/space_20"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <View

        android:layout_marginLeft="90dp"
        android:background="@color/tiao"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_marginRight="@dimen/space_20"
            android:layout_marginLeft="@dimen/space_15"
            android:layout_gravity="center_vertical"
            android:text="街道小区"
            android:visibility="invisible"
            android:textSize="@dimen/fontsize_14sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/short_area_et"
            android:textColorHint="@color/qianhuise"
            android:textSize="@dimen/fontsize_14sp"
            android:hint="详细地址"
            android:background="@null"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_marginRight="@dimen/space_20"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <View
        android:layout_marginLeft="90dp"
        android:background="@color/tiao"
        android:layout_width="match_parent"
        android:layout_height="0.6dp"/>

    <Button
        android:id="@+id/submit_bt"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="@dimen/space_30"
        android:background="@drawable/button_selector"
        android:text="@string/submit_data"
        android:textColor="@color/white"
        android:textSize="@dimen/fontsize_14sp" />

</LinearLayout>